<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">

  <TextView android:text="Settings"
    android:id="@+id/TextView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

  <TextView android:text="Tone"
    android:id="@+id/tone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

  <TextView android:text="Snooze"
    android:id="@+id/snooze"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

  <TextView android:id="@+id/spacer"
    android:layout_weight="1"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent" />

  <LinearLayout android:id="@+id/settings_buttons"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <Button android:text="@string/ok"
      android:id="@+id/settings_ok"
      android:layout_weight="1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

    <Button android:text="@string/cancel"
      android:id="@+id/settings_cancel"
      android:layout_weight="1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  </LinearLayout>

  <Button android:text="@string/delete"
    android:id="@+id/settings_delete"
    android:layout_weight="1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />
  

</LinearLayout>
