<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">

  <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
    <TextView android:text="@string/volume_start"
      android:layout_weight="1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
    <EditText android:id="@+id/volume_start"
      android:numeric="integer"
      android:inputType="phone"
      android:digits="0123456789"
      android:imeOptions="actionNext"
      android:gravity="right"
      android:width="55sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  </LinearLayout>

  <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
    <TextView android:text="@string/volume_end"
      android:layout_weight="1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
    <EditText android:id="@+id/volume_end"
      android:numeric="integer"
      android:inputType="phone"
      android:digits="0123456789"
      android:imeOptions="actionNext"
      android:gravity="right"
      android:width="55sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  </LinearLayout>

  <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
    <TextView android:text="@string/volume_duration"
      android:layout_weight="1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
    <EditText android:id="@+id/volume_duration"
      android:numeric="integer"
      android:inputType="phone"
      android:digits="0123456789"
      android:imeOptions="actionDone"
      android:gravity="right"
      android:width="55sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />    
  </LinearLayout>  
</LinearLayout>
